KAFKA-Shared: restore upstream LocalLog before narrow integration